[frontend] fix layout issues with footer

--- a/web/vueapp/src/assets/style/_home.scss
+++ b/web/vueapp/src/assets/style/_home.scss
@@ -6,6 +6,7 @@
   &.home-part-image {
     padding: 0;
     flex-shrink: 2;
+    max-height: 365px;
   }
 
   & > div {
