--- a/web/vueapp/src/assets/style/_overrides.scss
+++ b/web/vueapp/src/assets/style/_overrides.scss
@@ -72,10 +72,22 @@ h6 {
 
 .el-main, .el-header, .el-footer {
   padding: 0;
+  flex: 0;
+}
+
+.el-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#app > .el-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .el-footer {
-  min-height: 60px;
   height: auto !important;
 }
 
